Json refatorado e telas antigas deletadas

--- a/pt-BR.lproj/Localizable.strings
+++ b/pt-BR.lproj/Localizable.strings
@@ -6,5 +6,5 @@
   Copyright © 2019 Nathalia Melare. All rights reserved.
 */
 "Search ingredients" = "Pesquisar ingredientes";
-"arquivoJson" = "testeBR";
+"arquivoJson" = "ReceitasPortugues";
 "Search Tips" = "Pesquisar tutoriais";
