--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -6,6 +6,6 @@
   Copyright © 2019 Nathalia Melare. All rights reserved.
 */
 "Search ingredients" = "Search ingredients";
-"arquivoJson" = "teste";
+"arquivoJson" = "ReceitasIngles";
 "Search Tips" = "Search tips";
 
